Bug 165799 - activity diagram, branch/merge: background fill not disabled
Summary: activity diagram, branch/merge: background fill not disabled
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-05 17:29 UTC by Daniel Franke
Modified: 2013-11-06 17:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Franke 2008-07-05 17:29:08 UTC
Version:           1.5.8 (using 3.5.9, Gentoo)
Compiler:          Target: i686-pc-linux-gnu
OS:                Linux (i686) release 2.6.17.13

Start umbrello:
 * Diagram -> New -> Activity Diagram
 * add activity
 * add branch/merge
 * somewhere on the diagram: RMB -> Properties -> Color
 * set fill-color to something more noticable, e.g. red
 * uncheck "Use fill"
 * Apply/OK

The activity does not have any background any more (as expected), but the branch/merge symbol is filled with the just selected color.

I'd expect that no symbol is being filled if "Use fill" is disabled?!
Comment 1 Ralf Habacker 2012-05-31 19:15:24 UTC
This behavior is still present in svn trunk.
Comment 2 Ralf Habacker 2012-05-31 19:18:46 UTC
SVN commit 1297553 by habacker:

let branch activity widget honor diagram "use fill color" attribute


 M  +2 -0      activitywidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1297553
Comment 3 Ralf Habacker 2013-11-06 17:18:02 UTC
apply fixed bug from 4.9.0 changelog