let branch activity widget honor diagram "use fill color" attribute

BUG: 165799

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1297553